
Version 1.1 (in progress)
- TS_Resource:
    * lock() function added.
    * notification system introduced
    * removing get()
    * introducing operator->()
- TS_Queue:
    * Removing break_popping() from public section. stop() function introduced instead.
    * TS_Queue should now keep working after stop() is called. Any new insertion reenabled queue.
    * Introducing threadsWaiting4Data() and waitForData()
- Visual Studio build fixes.
- OpenLibrary shared libraries versioning.
- cleanups in cmake files:
    * OPENLIBRARY_CMAKE_INCLUDES renamed to OPENLIBRARY_USE_FILE
    * OPENLIBRARY_INCLUDE_DIRS and OPENLIBRARY_LIBRARIES variables added.
    * OpenLibraryVersion.cmake introduced. find_package() can be used with version now.

TODO:
- Remove current system of sublibraries management. Each library should be free to build itself as it wish.
- Move TS_Queue and TS_Resource to new lib: putils
- introduce debug/release versions in parallel?