@@ -14,14 +14,11 @@ include_directories(${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOUR
 
 set(LIB_SOURCES
     ${swap_table_cpp}
-    ts_resource.cpp
     )
 
 set(LIB_HEADERS
     ${swap_table_hpp}
     psort.hpp
-    ts_queue.hpp
-    ts_resource.hpp
     private/psort_private.hpp
 )
 
