@@ -1,5 +1,8 @@
 
 Version 1.1 (in progress)
+- New library introduced: putils
+    * TS_Resource moved to putils
+    * TS_Queue moved to putils
 - TS_Resource:
     * lock() function added.
     * notification system introduced
@@ -18,5 +21,4 @@ Version 1.1 (in progress)
 
 TODO:
 - Remove current system of sublibraries management. Each library should be free to build itself as it wish.
-- Move TS_Queue and TS_Resource to new lib: putils
 - introduce debug/release versions in parallel?
